<resources>
    <string name="app_name">Xyzapatos</string>
    <string name="titulo">XYZ Zapatos</string>
    <string name="sexo">Sexo:</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="tipo">Tipo:</string>
    <string name="zapatilla">Zapatilla</string>
    <string name="clasico">Clásico</string>
    <string name="marca">Marca:</string>
    <string-array name="arrayMarca">
        <item>@string/nike</item>
        <item>@string/adidas</item>
        <item>@string/puma</item>
    </string-array>
    <string name="nike">Nike</string>
    <string name="adidas">Adidas</string>
    <string name="puma">Puma</string>
    <string name="valor">El valor a pagar es:</string>
    <string name="cantidad">Ingrese la cantidad:</string>
    <string name="calcular">Calcular</string>
    <string name="error00">Ingrese una cantidad Válida</string>
    <string name="error01">Seleccione un sexo</string>
    <string name="error02">Seleccione un tipo de zapato</string>
</resources>
